# SShare

./: .gitignore  README.md  received_rockstar.txt.enc  rockstar.txt  setup.py
cpp/: CMakeLists.txt  Makefile  encryption.cpp  encryption.h
secure_share/: cli.py  encryption.py  file_transfer.py
secure_share.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: cli.py  encryption_wrapper.py  file_transfer.py
